--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gulp-plumber": "^1.2.0",
     "gulp-sass": "^4.0.1",
     "sass-module-importer": "^1.4.0"
+  },
+  "dependencies": {
+    "swiper": "^4.3.3"
   }
 }
